--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_orange_light"
     tools:context="com.iot.iotsmartbuilding.WriteFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -14,10 +15,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="@string/hello_write_fragment" />
+            android:layout_marginBottom="50dp"
+            android:padding="40dp"
+            android:text="@string/hello_write_fragment"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
@@ -25,15 +30,17 @@
 
             <TextView
                 android:id="@+id/station_name"
-                android:layout_width="50dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="50%" />
+                android:text="50%"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
@@ -41,17 +48,24 @@
 
                 <Button
                     android:id="@+id/button9"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@android:color/holo_red_dark"
                     android:text="+"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="24sp"
                     tools:layout_editor_absoluteX="71dp"
                     tools:layout_editor_absoluteY="231dp" />
 
                 <Button
                     android:id="@+id/button10"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@android:color/holo_red_dark"
                     android:text="-"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="24sp"
                     tools:layout_editor_absoluteX="71dp"
                     tools:layout_editor_absoluteY="231dp" />
 
@@ -61,30 +75,51 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="LIGHT"
-            tools:layout_editor_absoluteX="71dp"
-            tools:layout_editor_absoluteY="231dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="STORE"
-            tools:layout_editor_absoluteX="227dp"
-            tools:layout_editor_absoluteY="302dp" />
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:background="@android:color/holo_red_dark"
+                android:text="LIGHT"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="71dp"
+                tools:layout_editor_absoluteY="231dp" />
 
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="RADIATOR" />
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:background="@android:color/holo_red_dark"
+                android:text="RADIATOR"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:background="@android:color/holo_red_dark"
+                android:text="STORE"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="227dp"
+                tools:layout_editor_absoluteY="302dp" />
+        </LinearLayout>
 
     </LinearLayout>
 
