--- a/app/src/main/res/layout/fragment_read.xml
+++ b/app/src/main/res/layout/fragment_read.xml
@@ -17,7 +17,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:background="@android:color/holo_red_dark"
+            android:background="@color/colorAccent"
             android:text="Temperature"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
@@ -33,7 +33,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:background="@android:color/holo_red_dark"
+            android:background="@color/colorAccent"
             android:text="Humidity"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
@@ -49,7 +49,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="50dp"
-            android:background="@android:color/holo_red_dark"
+            android:background="@color/colorAccent"
             android:text="Light"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
@@ -65,7 +65,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
-            android:background="@android:color/holo_red_dark"
+            android:background="@color/colorAccent"
             android:text="physical presence"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
