--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -50,7 +50,7 @@
                     android:id="@+id/button9"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@android:color/holo_red_dark"
+                    android:background="@color/colorAccent"
                     android:text="+"
                     android:textColor="@android:color/background_light"
                     android:textSize="24sp"
@@ -62,7 +62,7 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
-                    android:background="@android:color/holo_red_dark"
+                    android:background="@color/colorAccent"
                     android:text="-"
                     android:textColor="@android:color/background_light"
                     android:textSize="24sp"
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
-                android:background="@android:color/holo_red_dark"
+                android:background="@color/colorAccent"
                 android:text="LIGHT"
                 android:textColor="@android:color/background_light"
                 android:textSize="18sp"
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:background="@android:color/holo_red_dark"
+                android:background="@color/colorAccent"
                 android:text="RADIATOR"
                 android:textColor="@android:color/background_light"
                 android:textSize="18sp"
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:background="@android:color/holo_red_dark"
+                android:background="@color/colorAccent"
                 android:text="STORE"
                 android:textColor="@android:color/background_light"
                 android:textSize="18sp"
