--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#D2691E</color>
+    <color name="colorPrimaryDark">#9B3C00</color>
+    <color name="colorAccent">#e53300</color>
+    <color name="colorblack">#212121</color>
 </resources>
