--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -14,6 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/roomText"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="50dp"
             android:padding="40dp"
@@ -29,7 +30,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/station_name"
+                android:id="@+id/valueText"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -47,7 +48,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/button9"
+                    android:id="@+id/plusButton"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:background="@color/colorAccent"
@@ -58,7 +59,7 @@
                     tools:layout_editor_absoluteY="231dp" />
 
                 <Button
-                    android:id="@+id/button10"
+                    android:id="@+id/minButton"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="10dp"
@@ -81,7 +82,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/lightButtonWR"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -95,7 +96,7 @@
                 tools:layout_editor_absoluteY="231dp" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/radiatorButton"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -107,7 +108,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/storeButton"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
