--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_light"
+    android:background="@android:color/background_light"
     tools:context="com.iot.iotsmartbuilding.WriteFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,9 +12,9 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/roomText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/roomText"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="50dp"
             android:padding="40dp"
@@ -36,7 +36,6 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="50%"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
