--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -11,15 +11,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/roomText"
+        <Spinner
+            android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="50dp"
             android:padding="40dp"
-            android:text="@string/hello_write_fragment"
-            android:textSize="18sp"
+            android:textSize="36sp"
             android:textStyle="bold" />
 
         <LinearLayout
